# Shiz-and-giggles

./: .gitignore  CHANGELOG.md  README.md  export_presets.cfg  index.html  main.py  package.json  project.godot  pyproject.toml  script.js  styles.css
.github/workflows/: ci.yml  nightly.yml  release-windows.yml
config/: movement.json
docs/: arena_specs.md
game/: __init__.py  config.py  health.py  match.py  math_utils.py  models.py  weapons.py
scenes/: arena.tscn  main.tscn  player.tscn
scripts/: build_artifacts.py  build_portable_bundle.py  hud.gd  load_test.py  network_manager.gd  package_release.py  player.gd
server/: anti_cheat.py  config.py  game_server.py  matchmaking.py  metrics.py
shizgiggles/: __init__.py  client.py  logic.py  protocol.py  server.py
src/client/: index.js
src/server/: index.js
src/shared/: movement.js  movementConfig.js  protocol.js
tests/: test_combat.py  test_game_server.py  test_movement.py  test_protocol.py  test_weapon.py
