[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shizgiggles"
version = "0.1.0-nightly"
description = "Lightweight client/server simulation for Shiz and Giggles"
authors = [{name = "Shiz and Giggles Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pyinstaller>=6.3",
]

[project.scripts]
shiz-client = "shizgiggles.client:main"
shiz-server = "shizgiggles.server:main"
shiz-load-test = "scripts.load_test:main"
